[maven-release-plugin] prepare release babel-maven-plugin-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jarslab.maven</groupId>
     <artifactId>babel-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>babel-maven-plugin</name>
 
     <prerequisites>
@@ -138,7 +137,7 @@
         <connection>scm:git:git@github.com:milpol/babel-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:milpol/babel-maven-plugin.git</developerConnection>
         <url>https://github.com/milpol/babel-maven-plugin</url>
-        <tag>HEAD</tag>
+        <tag>babel-maven-plugin-1.0</tag>
     </scm>
 
     <issueManagement>
