--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,28 @@
     <groupId>com.jarslab.maven</groupId>
     <artifactId>babel-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.1-SNAPSHOT</version>
-    <name>babel-maven-plugin</name>
+    <version>1.0-SNAPSHOT</version>
+    <name>Babel Maven Plugin</name>
+    <description>Transpile JavaScript files in Babel in pure Java.</description>
+    <url>https://github.com/milpol/babel-maven-plugin</url>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Milosz Polak</name>
+            <url>http://jarslab.com</url>
+            <roles>
+                <role>Project owner</role>
+                <role>Developer</role>
+            </roles>
+            <timezone>Europe/Warsaw</timezone>
+        </developer>
+    </developers>
 
     <prerequisites>
         <maven>${maven.api.version}</maven>
