--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.jarslab.maven</groupId>
     <artifactId>babel-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>Babel Maven Plugin</name>
     <description>Transpile JavaScript files in Babel in pure Java.</description>
     <url>https://github.com/milpol/babel-maven-plugin</url>
@@ -162,7 +162,7 @@
         <connection>scm:git:git@github.com:milpol/babel-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:milpol/babel-maven-plugin.git</developerConnection>
         <url>https://github.com/milpol/babel-maven-plugin</url>
-        <tag>babel-maven-plugin-1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
