--- a/src/example/pom.xml
+++ b/src/example/pom.xml
@@ -33,10 +33,6 @@
         </developer>
     </developers>
 
-    <prerequisites>
-        <maven>${maven.api.version}</maven>
-    </prerequisites>
-
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -50,7 +46,7 @@
             <plugin>
                 <groupId>com.jarslab.maven</groupId>
                 <artifactId>babel-maven-plugin</artifactId>
-                <version>1.3-SNAPSHOT</version>
+                <version>1.4-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <id>js-transpile</id>
@@ -60,6 +56,7 @@
                         </goals>
                         <configuration>
                             <verbose>true</verbose>
+                            <strategy>SEQUENTIAL</strategy>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <babelSrc>${project.basedir}/src/main/resources/babel-6.26.0.min.js</babelSrc>
                             <sourceDir>${project.basedir}/src/main/resources/js</sourceDir>
