--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <immutables.version>2.8.2</immutables.version>
         <maven.api.version>3.0</maven.api.version>
         <maven.plugin.version>3.6.0</maven.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -63,7 +64,7 @@
         <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
-            <version>2.8.2</version>
+            <version>${immutables.version}</version>
             <scope>provided</scope>
         </dependency>
         <!-- test dependencies -->
@@ -96,7 +97,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
+                <version>${immutables.version}</version>
                 <executions>
                     <execution>
                         <id>default-deploy</id>
